add timer and update setting store

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -23,6 +23,9 @@
 }
 
 html, body{
+  overflow-x: hidden;
+
+  min-width: 940px;
   padding: 0;
   margin: 0;
   background-color: var(--you-background-color);
