--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,5 @@
+@import "theme.css";
+
 /*定义滚动条高宽及背景
  高宽分别对应横竖滚动条的尺寸*/
 ::-webkit-scrollbar
@@ -24,7 +26,6 @@
 
 html, body{
   overflow-x: hidden;
-
   min-width: 940px;
   padding: 0;
   margin: 0;
